--- a/.homecfg/vscode/settings.json
+++ b/.homecfg/vscode/settings.json
@@ -22,4 +22,5 @@
     "workbench.view.alwaysShowHeaderActions": true,
     "editor.minimap.enabled": false,
     "editor.stickyScroll.enabled": false,
+    "debug.javascript.codelens.npmScripts": "never",
 }
