--- a/.homecfg/vscode/settings.json
+++ b/.homecfg/vscode/settings.json
@@ -23,4 +23,5 @@
     "editor.minimap.enabled": false,
     "editor.stickyScroll.enabled": false,
     "debug.javascript.codelens.npmScripts": "never",
+    "editor.autoClosingQuotes": "never",
 }
