--- a/.homecfg/vscode/settings.json
+++ b/.homecfg/vscode/settings.json
@@ -24,4 +24,5 @@
     "editor.stickyScroll.enabled": false,
     "debug.javascript.codelens.npmScripts": "never",
     "editor.autoClosingQuotes": "never",
+    "python.analysis.typeCheckingMode": "strict",
 }
