Switching editor.autoClosingBrackets to beforeWhitespace in vscode

--- a/.homecfg/vscode/settings.json
+++ b/.homecfg/vscode/settings.json
@@ -28,4 +28,5 @@
     "telemetry.feedback.enabled": false,
     "editor.cursorStyle": "block",
     "editor.cursorBlinking": "solid",
+    "editor.autoClosingBrackets": "beforeWhitespace",
 }
