Disabling html.autoClosingTags in vscode

--- a/.homecfg/vscode/settings.json
+++ b/.homecfg/vscode/settings.json
@@ -29,4 +29,5 @@
     "editor.cursorStyle": "block",
     "editor.cursorBlinking": "solid",
     "editor.autoClosingBrackets": "beforeWhitespace",
+    "html.autoClosingTags": false,
 }
