Disabling AI chat in vscode

--- a/.homecfg/vscode/settings.json
+++ b/.homecfg/vscode/settings.json
@@ -30,4 +30,5 @@
     "editor.cursorBlinking": "solid",
     "editor.autoClosingBrackets": "beforeWhitespace",
     "html.autoClosingTags": false,
+    "chat.disableAIFeatures": true,
 }
