Configuring diffEditor in vscode

--- a/.homecfg/vscode/settings.json
+++ b/.homecfg/vscode/settings.json
@@ -31,4 +31,5 @@
     "editor.autoClosingBrackets": "beforeWhitespace",
     "html.autoClosingTags": false,
     "chat.disableAIFeatures": true,
+    "diffEditor.hideUnchangedRegions.enabled": true,
 }
