--- a/.homecfg/vscode/settings.json
+++ b/.homecfg/vscode/settings.json
@@ -31,5 +31,7 @@
     "editor.autoClosingBrackets": "beforeWhitespace",
     "html.autoClosingTags": false,
     "chat.disableAIFeatures": true,
+    "claudeCode.preferredLocation": "sidebar",
+    "claudeCode.selectedModel": "opus",
     "diffEditor.hideUnchangedRegions.enabled": true,
 }
